<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/app_title"
                android:contentDescription=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="29dp"
                android:layout_height="32dp"
                android:background="@drawable/username_icon"
                app:layout_constraintBottom_toBottomOf="@+id/editText"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintHorizontal_bias="0.074"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toTopOf="@+id/editText" />


            <EditText
                android:id="@+id/editText"
                android:layout_width="257dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="92dp"
                android:layout_marginEnd="8dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingStart="80dp"
                android:paddingLeft="80dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:singleLine="false"
                android:textColor="#fff"
                android:textColorHint="#ADAAAA"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.597"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <ImageView
                android:id="@+id/lockImageViewPass"
                android:layout_width="30dp"
                android:layout_height="31dp"
                android:background="@drawable/password_icon"
                app:layout_constraintBottom_toBottomOf="@+id/editText2"
                app:layout_constraintEnd_toEndOf="@+id/editText2"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="@+id/editText2"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="254dp"
                android:layout_height="42dp"
                android:layout_marginTop="32dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingLeft="80dp"
                android:paddingRight="0dp"
                android:paddingStart="80dp"
                android:paddingEnd="0dp"
                android:textColor="#fff"
                android:textColorHint="#ADAAAA"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/btn_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <TextView
                android:id="@+id/textViewHaveAcc"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:text="@string/have_acc_msg"
                android:textColor="#ADAAAA"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/reg_title"
                android:textColor="@color/fontBaseColor"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/tvErrorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="asdfasdjklasjdklajskld"
                android:textColor="@color/errorMsgColor"
                android:textSize="20dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintHorizontal_bias="0.363"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>
